<?xml version="1.0"?>
<package format="2">
  <name>rvio</name>
  <version>0.0.0</version>
  <description>Robocentric visual-inertial odometry</description>

  <author email="zhuai@udel.edu">Zheng Huai</author>

  <maintainer email="zhuai@udel.edu">Zheng Huai</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>

</package>
